# mineru-local-orchestrator

./: .gitignore  README.md  pyproject.toml
configs/: models.local.yaml  prompts.yaml
eval_dataset/chart_td_f1/: README.md  __init__.py  build_dataset.py  dataset.json  evaluate_files.py  evaluator.py  run_eval.py
eval_dataset/mermaid_td_f1/: README.md  __init__.py  build_dataset.py  dataset.json  evaluate_files.py  evaluator.py  qwen_equivalence_stress_test.py  run_eval.py
prompts/: project_context.md
scripts/: sync_to_server.sh
src/: __init__.py  decision.py  flowvqa_eval.py  graph_fusion.py  image_loader.py  main.py  normalizer.py  projection.py  prompt_builder.py  render_compare_dashboard.py  render_mermaid_compare.py  schema.py  scorer.py  seal_utils.py  serve_dashboard.py  writer.py
src/clients/: __init__.py  base.py  glm_local_client.py  minerupro_client.py  paddle_local_client.py  qwen_local_client.py
src/pipeline/: __init__.py  adjudicator.py  alignment.py  flowchart_utils.py  issues.py  llm_adjudicator.py  normalizers.py  patches.py  table_evaluator.py  table_ir.py  (+1 more)
tests/: test_adjudicator.py  test_chart_td_f1.py  test_flowchart_utils.py  test_flowvqa_eval.py  test_glm_real_server.py  test_image_loader.py  test_issues.py  test_llm_adjudicator.py  test_main.py  test_mermaid_td_f1.py  test_normalizers.py  test_patches.py  test_preprocess.py  test_prompt_builder.py  test_qwen_equivalence_stress_test.py  test_qwen_local_client.py  test_render_compare_dashboard.py  test_render_mermaid_compare.py  test_table_evaluator.py  test_table_ir.py  test_writer.py
(+21 files in other folders)
