[project]
name = "mineru-local-orchestrator"
version = "0.1.0"
description = "Local MinerU and Qwen orchestration for charts, flowcharts, and stamp recognition."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0,<3",
  "PyYAML>=6.0.1,<7",
  "requests>=2.32.0,<3",
  "tqdm>=4.66.0,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9",
  "ruff>=0.5.0,<1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

