[project]
name = "mineru-local-orchestrator"
version = "0.1.0"
description = "Local MinerU and Qwen orchestration for charts, flowcharts, and stamp recognition."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.4.0,<12",
  "pydantic>=2.7.0,<3",
  "PyYAML>=6.0.1,<7",
  "requests>=2.32.0,<3",
  "tqdm>=4.66.0,<5",
  "beautifulsoup4>=4.12.3,<5",
  "html5lib>=1.1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9",
  "ruff>=0.5.0,<1",
]
chart_eval = [
  "numpy>=2.0.0,<3",
  "python-Levenshtein>=0.27.0,<1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
